<resources>
    <string name="app_name">ePDS FRT</string>
    <string name="helpdesk">Helpdesk</string>
    <string name="field_engineer">Field Engineer</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No.</string>
    <string name="enter_your_exact_mobile_no">Enter Your Exact Mobile No.</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_here">Enter OTP Here</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login">Login</string>
    <string name="please_enter_email_address">Please enter email address.</string>
    <string name="please_enter_valid_email_address">Please enter valid email address.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="dashboard">Dashboard</string>
    <string name="assign_to_me">Assigned to me</string>
    <string name="complaint_pending">Pending Complaints</string>
    <string name="edit_challan">Edit Challan</string>
    <string name="edit_complaint_challan">Edit Complaint Challan</string>
    <string name="reports">Reports</string>
    <string name="fps_detail">FPS Detail</string>
    <string name="fps_name">FPS Name</string>
    <string name="fps_code">FPS Code</string>
    <string name="fps_mobile">FPS Mobile</string>
    <string name="name">Name</string>
    <string name="errorregno">ErrorRegNo</string>
    <string name="number">Number</string>
    <string name="call_detail">Call Detail (Complaint)</string>
    <string name="issue">Issue</string>
    <string name="issue_type">Issue Type</string>
    <string name="severity">Severity</string>
    <string name="date">Registration Date</string>
    <string name="attendance">Attendance</string>
    <string name="frt_punch_in">FrtPunchIn</string>
    <string name="forms">Forms</string>
    <string name="logout">Logout</string>
    <string name="error_message">Something went wrong. Please try again.</string>
    <string name="error">Error</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="resolve">Resolve Complaint</string>
    <string name="remark">Remark</string>
    <string name="replacement_type">Replacement Type</string>
    <string name="choose_replacement_type">Choose Replacement Type</string>
    <string name="createdby">CreatedBy</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_complaint">No Complaints Found</string>
    <string name="replace_part">Part Replace</string>
    <string name="replace_part_by_service_center">Part Replaced By Service Center</string>
    <string name="courier_detail">Courier Detail</string>
    <string name="send_service_center">Send to Service Center</string>
    <string name="send_service_center_caps">SEND TO SERVICE CENTER</string>
    <string name="call_detail_">Complaint Detail</string>
    <string name="challan_upload">Challan Upload</string>
    <string name="complaint_resolve">Resolved Complaints</string>
    <string name="image">Challan Image</string>
    <string name="dso_letter">Damage letter from DSO</string>
    <string name="please_upload_dso_letter">Please Upload Damage letter from DSO</string>
    <string name="username">Username</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="district">District</string>
    <string name="docketno">Docket Number</string>
    <string name="couriername">Courier Name</string>
    <string name="do_you_want_to_logout_from_this_app">Do you want to logout from this app?</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="do_you_want_to_exit_from_this_app">Do you want to exit from this app?</string>
    <string name="ok">Ok</string>
    <string name="please_input_remark">Please input remark.</string>
    <string name="please_input_replace_part">Please input replace part.</string>
    <string name="please_input_courier_detail">Please input courier detail.</string>
    <string name="please_select_image">Please select challan image.</string>
    <string name="please_select_image1">Please select image.</string>
    <string name="please_select_resolved_date">Please select resolved date.</string>
    <string name="please_input_challan_number">Please input challan number.</string>
    <string name="please_input_complaint_number">Please input complaint number.</string>
    <string name="complaint_number">Complaint Number</string>
    <string name="are_you_sure_you_want_to_send_to_service_center_this_complaint">Are you sure. You want to send to service center this complaint?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_resolve_this_complaint">Are you sure. You want to resolve this complaint?</string>
    <string name="are_you_sure_you_want_to_upload_challan">Are you sure. You want to Upload Challan?</string>
    <string name="are_you_sure_you_want_to_accept_this_complaint">Are you sure. You want to accept this complaint?</string>
    <string name="hello">Hello,</string>
    <string name="resolved_date">Resolved Date</string>
    <string name="send_to_se_date">SendToSE Date</string>
    <string name="challan_number">Challan Number</string>
    <string name="enter_challan_number">Enter Challan Number</string>
    <string name="eng_to_hi_message">Your current language is english. Do you want to change language english to hindi?</string>
    <string name="hi_to_eng_message">Your current language is hindi. Do you want to change language hindi to english?</string>
    <string name="total">Total Complaints</string>
    <string name="upload_challan">Upload Challan</string>
    <string name="upload_pending_complaint_challan">Upload Pending Complaint Challan</string>
    <string name="checking_for_update">Checking for update...</string>
    <string name="checking">Checking</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="new_version_is_available">Newer version of app is available on play store. You have to update your app. You will be redirected to play store to update your app.</string>
    <string name="go_to_play_store">Go to play store</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="search">Search</string>
    <string name="switch_str">Switch</string>
    <string name="bar_graph">Bar Graph</string>
    <string name="daily_reports">Daily Reports</string>
    <string name="reports_details">Reports Details</string>
    <string name="monthly_reports">Monthly Reports</string>
    <string name="sla_reports">SLA Reports</string>
    <string name="graph">Graph</string>
    <string name="not_resolved">Not Resolved</string>
    <string name="resolved">Resolved</string>
    <string name="grand_total">Grand Total</string>
    <string name="c_no">C.No.</string>
    <string name="mobile_no">Mobile NO.</string>
    <string name="reg_date">Reg. Date</string>
    <string name="tehsil">Tehsil</string>
    <string name="select_filter">Select filter</string>
    <string name="select_block">Select Block</string>
    <string name="filter">Filter</string>
    <string name="select_errortype">Select ErrorType</string>
    <string name="errortype">ErrorType</string>
    <string name="errorstatus">ErrorStatus</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="current_month">Current month</string>
    <string name="previous_month">Previous month</string>
    <string name="custom_filter">Custom filter</string>
    <string name="normal">Normal</string>
    <string name="complaints">Complaints</string>
    <string name="complaints_cpt">COMPLAINTS</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="createdOn">createdOn</string>
    <string name="status">Status</string>
    <string name="current_status">Current Status</string>
    <string name="share_pdf">Share Pdf</string>
    <string name="print_pdf">Print Pdf</string>
    <string name="text_generated_file_error">Unable to generate pdf file.</string>
    <string name="select_year_month">Select Month and Year</string>
    <string name="no_record_found_to_export_pdf">No record found to export pdf.</string>
    <string name="no_record_found_to_export_excel">No record found to export Excel.</string>
    <string name="no_record_found">No Record Found</string>
    <string name="no_data_found">No Data Found</string>
    <string name="punch_out_time">Punch Out Time</string>
    <string name="location_not_found">Location not found</string>
    <string name="gps_should_be_on_for_mark_punch">GPS Should be ON for Mark Punch</string>
    <string name="punch_in_time">Punch In Time</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="please_install_google_play_services">Please install Google Play services.</string>
    <string name="date_str">Date</string>
    <string name="please_allow_gps_with_high_accuracy">Please allow GPS with high accuracy.</string>
    <string name="machine_is_physically_damaged">Machine is physically damaged.</string>
    <string name="app_version">App Version</string>
    <string name="inventory">Inventory</string>
    <string name="stock">Stock</string>
    <string name="current_stock">Current Main Stock</string>
    <string name="se_available_stock">Current SE Stock</string>
    <string name="available_stock">Available Stock</string>
    <string name="send_material">Send Material</string>
    <string name="receive_material">Receive Stock</string>
    <string name="material_list">Material List</string>
    <string name="complaint_on_se_center">Complaints on Service Center</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="new_challan_for_dispatch">Create New Challan for Dispatch</string>
    <string name="no_stock_found">No Stock Found</string>
    <string name="total_stock">Total Stock</string>
    <string name="select_products">Select Products</string>
    <string name="go_permission_settings">ePDS FRT app is required location permission. Please follow below instructions.</string>
    <string name="go_permission_settings_instructions">Click Go to settings button -> Permissions -> Location -> Select Allow all the time option.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="message">Message</string>
    <string name="item_name">Item Name</string>
    <string name="save">Save</string>
    <string name="are_you_sure_reset_device">Are you sure. You want to reset the device.</string>
    <string name="device_reset_successfully">The device has been reset successfully</string>
    <string name="confirm">Confirm</string>
    <string name="courier_name">Courier Name</string>
    <string name="request_stock">Request Stock</string>
    <string name="upload_challan_image">Upload Challan Image</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_amount">Enter expense Amount</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="enter_district">Enter District</string>
    <string name="enter_docketno">Enter Docket no.</string>
    <string name="enter_couriername">Enter Courier Name</string>
    <string name="fpscode_here">FpsCode Here!</string>
    <string name="enter_your_fps_code">Enter your Fps Code</string>
    <string name="okay">Okay</string>
</resources>