<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/go_permission_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/go_permission_settings_instructions"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"/>

        <TextView
            android:id="@+id/buttonGoToSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/go_to_settings"
            android:visibility="gone"
            android:textColor="@color/colorActionBar" />
    </LinearLayout>
</RelativeLayout>