<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/rounded_layout_for_dialog_dispatch">
        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/alert"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_reset_device"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="@dimen/_10sdp"/>

            <LinearLayout
                android:id="@+id/layoutBottom"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/buttonNo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/rounded_button_orange_layout"
                    android:hint="@string/no"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />
                <Space
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/buttonYes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/rounded_button_blue_layout"
                    android:hint="@string/yes"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>