<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/rounded_layout_for_dialog_dispatch">
        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_reset_successfully"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="@dimen/_10sdp"/>

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rounded_button_blue_layout"
                android:hint="@string/ok"
                android:layout_gravity="end"
                android:textColorHint="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</layout>